update_content_active_phpstorm